# selfcoin-core

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.testnet.yml  mod.md  roadmap.md  selfcoin-harder.md
.github/workflows/: selfcoin-mint-packaging.yml  selfcoin-wallet-packaging.yml
apps/selfcoin-cli/: main.cpp
apps/selfcoin-lightserver/: main.cpp
apps/selfcoin-node/: main.cpp
apps/selfcoin-wallet/: main.cpp  wallet_store.cpp  wallet_store.hpp  wallet_window.cpp  wallet_window.hpp
build-asan/: Makefile
docs/: ADVERSARIAL_RUNTIME_HARDENING.md  ARCHITECTURE_OVERVIEW.md  BOOTSTRAP_AND_SYNC_DEBUGGING.md  CHAUMIAN_MINT_BOUNDARY.md  CONSENSUS_SEQUENCE.md  FIGURES.md  GLOSSARY.md  LIGHTSERVER_PROOFS.md  MAINNET_3_SERVER_RUNBOOK.md  MAINNET_LAUNCH_READINESS.md  PRIVATE_SORTITION_V5.md  REFERENCE_WALLET_INSTALL.md  REFERENCE_WALLET_RELEASE_NOTES_TEMPLATE.md  REFERENCE_WALLET_RELEASE_PROCESS.md  REFERENCE_WALLET_SPEC.md  ROADMAP_UNSTOPPABLE_UPGRADES.md  SELFCOIN_CORE_CURRENT_BEHAVIOR.md  SELFCOIN_MINT_RUNBOOK.md  VALIDATOR_LIVENESS_V4.md  VARIABLE_BOND_V7.md  WEIGHTED_SORTITION_V6.md  WHITEPAPER.md  WHITEPAPER_SUMMARY.md  consensus-history.md  runtime-consensus.md
fuzz/: fuzz_p2p_frame.cpp  fuzz_tx_parse.cpp
mainnet/: GENESIS_SPEC.md  GENESIS_VALIDATOR_CEREMONY.md  MAINNET_PARAMS.md  MAINNET_PLAN.md  SEEDS.json  SEEDS.md  THREAT_MODEL_AND_LAUNCH_CHECKLIST.md  genesis.json
packaging/linux/: selfcoin-wallet.desktop.in
scripts/: bootstrap_build.sh  demo_nextnet_pr1.sh  deploy_vps.sh  generate_wallet_release_key.sh  genesis_to_cpp.py  observe.py  package_reference_wallet.sh  run_network_regression.sh  run_restart_regression.sh  verify_wallet_release.sh
sdk/selfcoin-wallet-js/: README.md  package-lock.json  package.json  vitest.config.ts
sdk/selfcoin-wallet-js/examples/: node-demo.ts  watch.ts
sdk/selfcoin-wallet-js/src/: index.ts
sdk/selfcoin-wallet-js/src/address/: index.ts
sdk/selfcoin-wallet-js/src/crypto/: ed25519.ts  hash.ts
sdk/selfcoin-wallet-js/src/proofs/: finality.ts  smt.ts
sdk/selfcoin-wallet-js/src/rpc/: LightServerClient.ts
sdk/selfcoin-wallet-js/src/script/: index.ts
sdk/selfcoin-wallet-js/src/tx/: codec.ts  tx.ts
sdk/selfcoin-wallet-js/src/types/: index.ts
sdk/selfcoin-wallet-js/src/wallet/: SelfCoinWallet.ts  coinSelection.ts
sdk/selfcoin-wallet-js/test/: address.test.ts  coin-selection.test.ts  finality-proof.test.ts  integration.devnet.test.ts  lightserver-e2e-tamper.test.ts  script.test.ts  smt-proof.test.ts  tx-signing.test.ts
sdk/selfcoin-wallet-js/test-vectors/: smt_vectors.json  vectors.json
services/selfcoin-mint/: README.md  secret_helper.py  server.py  test_integration.py  test_packaging.py  test_state.py
services/selfcoin-mint/systemd/: install_selfcoin_mint.sh  selfcoin-mint-server.service  selfcoin-mint-worker.service  selfcoin-mint.env.example  selfcoin-mint.tmpfiles.conf  smoke_deploy.sh
spec/: SELFCOIN_ADDRESS_V0.md  SELFCOIN_CONSENSUS_V0.md  SELFCOIN_P2P_V0.md  SELFCOIN_WALLET_API_V1.md
src/address/: address.cpp  address.hpp
src/codec/: bytes.cpp  bytes.hpp  varint.cpp  varint.hpp
src/common/: chain_id.cpp  chain_id.hpp  network.cpp  network.hpp  paths.cpp  paths.hpp  types.cpp  types.hpp
src/consensus/: activation.cpp  activation.hpp  monetary.cpp  monetary.hpp  randomness.cpp  randomness.hpp  sortition_v5.cpp  sortition_v5.hpp  sortition_v6.cpp  sortition_v6.hpp  state_commitment.cpp  state_commitment.hpp  validators.cpp  validators.hpp  votes.cpp  votes.hpp  vrf_sortition.cpp  vrf_sortition.hpp
src/crypto/: ed25519.cpp  ed25519.hpp  hash.cpp  hash.hpp  smt.cpp  smt.hpp  vrf.cpp  vrf.hpp
src/genesis/: embedded_mainnet.cpp  embedded_mainnet.hpp  genesis.cpp  genesis.hpp
src/keystore/: validator_keystore.cpp  validator_keystore.hpp
src/lightserver/: client.cpp  client.hpp  server.cpp  server.hpp
src/mempool/: mempool.cpp  mempool.hpp
src/merkle/: merkle.cpp  merkle.hpp
src/node/: node.cpp  node.hpp
src/p2p/: addrman.cpp  addrman.hpp  framing.cpp  framing.hpp  hardening.cpp  hardening.hpp  messages.cpp  messages.hpp  peer_manager.cpp  peer_manager.hpp
src/policy/: hashcash.cpp  hashcash.hpp
src/privacy/: mint_client.cpp  mint_client.hpp  mint_scripts.cpp  mint_scripts.hpp
src/storage/: db.cpp  db.hpp  snapshot.cpp  snapshot.hpp
src/utxo/: signing.cpp  signing.hpp  tx.cpp  tx.hpp  validate.cpp  validate.hpp
tests/: test_activation.cpp  test_address.cpp  test_addrman.cpp  test_bond_weight_v7.cpp  test_bonding.cpp  test_chain_id.cpp  test_codec.cpp  test_consensus.cpp  test_crypto.cpp  test_finality_certificate.cpp  test_framework.hpp  test_genesis.cpp  test_hardening.cpp  test_integration.cpp  test_keystore.cpp  test_lightserver.cpp  test_main.cpp  test_mainnet_characterization.cpp  test_mempool.cpp  test_monetary.cpp  test_p2p.cpp  test_paths.cpp  test_privacy.cpp  test_protocol_scope.cpp  test_smt.cpp  test_snapshot.cpp  test_sortition_v2.cpp  test_sortition_v5.cpp  test_sortition_v6.cpp  test_state_commitment.cpp  test_validator_v4.cpp  test_vrf.cpp  test_wallet_store.cpp
